# strongswan

./: .gitignore
src/charon/: Makefile.am
src/libcharon/: Makefile.am  daemon.c
src/libcharon/encoding/: generator.c  message.c  parser.c
src/libcharon/network/: receiver.c  sender.c
src/libcharon/plugins/addrblock/: Makefile.am
src/libcharon/plugins/attr/: Makefile.am
src/libcharon/plugins/bypass_lan/: Makefile.am
src/libcharon/plugins/certexpire/: Makefile.am
src/libcharon/plugins/connmark/: Makefile.am
src/libcharon/plugins/counters/: Makefile.am
src/libcharon/plugins/dhcp/: Makefile.am
src/libcharon/plugins/eap_aka/: Makefile.am  eap_aka_peer.c  eap_aka_server.c
src/libcharon/plugins/eap_aka_3gpp/: Makefile.am
src/libcharon/plugins/eap_aka_3gpp2/: Makefile.am
src/libcharon/plugins/eap_dynamic/: Makefile.am
src/libcharon/plugins/eap_identity/: Makefile.am
src/libcharon/sa/: ike_sa.c  ike_sa_manager.c  ike_sa_manager.h
src/libipcmsgqueue/: ipc_file_util.c  ipc_file_util.h  ipc_msg_queue.c  ipc_msg_queue.h  ipc_msg_queue_comm.h  ipc_msg_queue_msg_def.h  ipc_msg_queue_sub_bbuguard.h  ipc_msg_queue_sub_cpcellapp.h  ipc_msg_queue_sub_cpgnbapp.h  ipc_msg_queue_sub_cpupproxy.h  ipc_msg_queue_sub_duapp.h  ipc_msg_queue_sub_fho.h  ipc_msg_queue_sub_netconf.h  ipc_msg_queue_sub_oam.h  ipc_msg_queue_sub_ru.h  ipc_msg_queue_sub_strongswanikeapp.h
src/libipsec/: esp_context.c  ipsec_sa.c  ipsec_sa_mgr.c
src/libsimaka/: simaka_message.c  simaka_message.h
src/libstrongswan/threading/: thread.c
src/xfrmi/: Makefile.am
(+31 files in other folders)
